# napari-fits

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
src/napari_fits/: napari.yaml
src/napari_fits/_tests/: test_reader.py  test_sample_data.py
